# DATA-PIPELINE

./: .env  .gitignore  Dockerfile  README.md  car_chachacha.ipynb  car_crawler.py  connection.py  create_tables.sql  docker-compose.yml  encar_crawler.py  encar_주요컬럼설명.md  env.example  finance.ipynb  kb_chachacha_cars_20250915_204543.csv  kb_chachacha_cars_20250915_204543.json  kb_chachacha_crawler.py  model.py  postgresql.conf  requirements.txt  test_chacha_crawl_10.py  test_chacha_insurance.ipynb  test_insurance_crawling.py  test_login.html  프로젝트 진행상황.md
ai_model/: parctice_car.ipynb  practice_model.ipynb
backend/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  test_agents.py  test_multi_agent_chat.py  test_simple_chat.py
backend/src/: main.py
backend/src/agents/: chat_agent.py  multi_agent_orchestrator.py  vehicle_agent.py
backend/src/api/: router.py
backend/src/api/endpoints/: agents.py  auth.py  simple_agents.py  users.py  vehicles.py
backend/src/backend/: main.py
backend/src/backend/api/: router.py
backend/src/backend/api/endpoints/: auth.py  users.py
backend/src/backend/core/: config.py
backend/src/backend/database/: connection.py  models.py
backend/src/core/: config.py
backend/src/database/: __init__.py  connection.py  models.py
config/: airflow.cfg
crawler/: chacha_crawler.py  encar.ipynb  encar_crawler.py  getcha_crawler.py  inspection_mapping.py  option_mapping.py  review.ipynb
dags/: chacha_crawling_dag.py  encar_crawling_dag.py  getcha_review_dag.py  slack_test_dag.py
data-pipeline/: .env.example  (+2 more)
(+53 files in other folders)
